better dialogs and forms
